--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ subjects:
 - !lcsh 'Authors, English -- 19th century -- Biography'
 - !lcsh 'Borrow, George, 1803-1881'
 - !lcc 'PR'
+- GITenberg
 title: 'Souvenir of the George Borrow Celebration
 
   Norwich, July 5th, 1913'
